[package]
name = "xi_jinping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.9"
lazy_static = "1.4.0"
toml = "0.5.8"
serde_derive = "1.0.132"
serde = { version = "1.0.132", features = ["derive"] }
